--- a/modules/account_payment_clearing_cog/locale/fr_FR.po
+++ b/modules/account_payment_clearing_cog/locale/fr_FR.po
@@ -4,4 +4,4 @@ msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "field:account.payment.journal,post_clearing_move:"
 msgid "Post Clearing Move"
-msgstr ""
+msgstr "Emettre le mouvement de compensation"
