--- a/modules/account_aggregate/locale/fr_FR.po
+++ b/modules/account_aggregate/locale/fr_FR.po
@@ -1,6 +1,42 @@
-#
+# 
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
+
+msgctxt "error:account.move.line.aggregated:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:account.move.line.aggregated:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:account.move.snapshot:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:account.move.snapshot:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
 
 msgctxt "error:account.move.snapshot:"
 msgid "No sequence defined in configuration"
@@ -36,6 +72,10 @@ msgstr "Identifiant du mouvement agrégé"
 
 msgctxt "field:account.move.line.aggregated,create_date:"
 msgid "Create Date"
+msgstr "Date de Création"
+
+msgctxt "field:account.move.line.aggregated,create_date_:"
+msgid "Creation date"
 msgstr "Date de Création"
 
 msgctxt "field:account.move.line.aggregated,create_uid:"
@@ -90,8 +130,16 @@ msgctxt "field:account.move.line.aggregated,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
+msgctxt "field:account.move.line.aggregated,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
+
 msgctxt "field:account.move.snapshot,create_date:"
 msgid "Create Date"
+msgstr "Date de Création"
+
+msgctxt "field:account.move.snapshot,create_date_:"
+msgid "Creation date"
 msgstr "Date de Création"
 
 msgctxt "field:account.move.snapshot,create_uid:"
@@ -117,6 +165,10 @@ msgstr "Date de mise à jour"
 msgctxt "field:account.move.snapshot,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
+
+msgctxt "field:account.move.snapshot,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
 
 msgctxt "field:account.move.snapshot.done,id:"
 msgid "ID"
