--- a/modules/commission_insurance/locale/fr_FR.po
+++ b/modules/commission_insurance/locale/fr_FR.po
@@ -196,7 +196,7 @@ msgstr "ID"
 
 msgctxt "field:commission.create_agents.ask,plans:"
 msgid "Plans"
-msgstr ""
+msgstr "Plans"
 
 msgctxt "field:commission.create_agents.parties,account_payable:"
 msgid "Account Payable"
