--- a/modules/endorsement_insurance/locale/fr_FR.po
+++ b/modules/endorsement_insurance/locale/fr_FR.po
@@ -11,6 +11,10 @@ msgstr ""
 "garantie obligatoire est supprimée"
 
 msgctxt "error:endorsement.contract.covered_element.field:"
+msgid "Can't find configuration for code %s"
+msgstr ""
+
+msgctxt "error:endorsement.contract.covered_element.field:"
 msgid "Cannot import : no object %s with functional key: \"%s\" were found."
 msgstr ""
 "Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
@@ -27,6 +31,10 @@ msgstr ""
 "%s\n"
 "partagent la même clé fonctionnelle :\n"
 "\"%s\"."
+
+msgctxt "error:endorsement.contract.covered_element.option:"
+msgid "Can't find configuration for code %s"
+msgstr ""
 
 msgctxt "error:endorsement.contract.covered_element.option:"
 msgid "Cannot import : no object %s with functional key: \"%s\" were found."
@@ -67,6 +75,10 @@ msgid "Update %s"
 msgstr "Mise à jour de %s"
 
 msgctxt "error:endorsement.contract.covered_element:"
+msgid "Can't find configuration for code %s"
+msgstr ""
+
+msgctxt "error:endorsement.contract.covered_element:"
 msgid "Cannot import : no object %s with functional key: \"%s\" were found."
 msgstr ""
 "Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
@@ -105,6 +117,10 @@ msgid "Update %s"
 msgstr "Mise à jour de %s"
 
 msgctxt "error:endorsement.contract.extra_premium.field:"
+msgid "Can't find configuration for code %s"
+msgstr ""
+
+msgctxt "error:endorsement.contract.extra_premium.field:"
 msgid "Cannot import : no object %s with functional key: \"%s\" were found."
 msgstr ""
 "Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
@@ -121,6 +137,10 @@ msgstr ""
 "%s\n"
 "partagent la même clé fonctionnelle :\n"
 "\"%s\"."
+
+msgctxt "error:endorsement.contract.extra_premium:"
+msgid "Can't find configuration for code %s"
+msgstr ""
 
 msgctxt "error:endorsement.contract.extra_premium:"
 msgid "Cannot import : no object %s with functional key: \"%s\" were found."
@@ -308,7 +328,7 @@ msgstr "ID"
 
 msgctxt "field:contract.covered_element.option.remove,options:"
 msgid "Options To Remove"
-msgstr ""
+msgstr "Garanties à résilier"
 
 msgctxt ""
 "field:contract.covered_element.option.remove.option_selector,contract:"
@@ -328,7 +348,7 @@ msgstr "Risque Couvert"
 msgctxt ""
 "field:contract.covered_element.option.remove.option_selector,covered_element_option_endorsement:"
 msgid "Covered Element Option Endorsement"
-msgstr ""
+msgstr "Avenant de modification des garanties"
 
 msgctxt ""
 "field:contract.covered_element.option.remove.option_selector,end_date:"
@@ -356,7 +376,7 @@ msgstr "Date d'Effet"
 msgctxt ""
 "field:contract.covered_element.option.remove.option_selector,to_remove:"
 msgid "To Remove"
-msgstr ""
+msgstr "A résilier"
 
 msgctxt "field:endorsement.contract,covered_elements:"
 msgid "Covered Elements"
@@ -518,6 +538,10 @@ msgstr "Définition"
 msgctxt "field:endorsement.contract.covered_element.option,extra_premiums:"
 msgid "Extra Premium Endorsement"
 msgstr "Modification des surprimes"
+
+msgctxt "field:endorsement.contract.covered_element.option,func_key:"
+msgid "Functional Key"
+msgstr "Clé fonctionnelle"
 
 msgctxt "field:endorsement.contract.covered_element.option,id:"
 msgid "ID"
@@ -835,11 +859,11 @@ msgstr "Nouvel élément couvert"
 
 msgctxt "model:contract.covered_element.option.remove,name:"
 msgid "Remove Option"
-msgstr ""
+msgstr "Résiliation des garanties"
 
 msgctxt "model:contract.covered_element.option.remove.option_selector,name:"
 msgid "Remove Option Selector"
-msgstr ""
+msgstr "Garanties"
 
 msgctxt "model:endorsement.contract.covered_element,name:"
 msgid "Endorsement Covered Element"
@@ -943,7 +967,7 @@ msgstr "Options"
 
 msgctxt "view:contract.covered_element.option.remove:"
 msgid "Remove Covered Element"
-msgstr ""
+msgstr "Enlever un élément couvert"
 
 msgctxt "view:endorsement.contract.covered_element.field:"
 msgid "Endorsement Field"
