--- a/modules/account_payment_sepa_cog/locale/fr_FR.po
+++ b/modules/account_payment_sepa_cog/locale/fr_FR.po
@@ -3,6 +3,10 @@ msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "error:account.payment.sepa.mandate:"
+msgid "Can't find configuration for code %s"
+msgstr "Pas de configuration pour le code %s"
+
+msgctxt "error:account.payment.sepa.mandate:"
 msgid "Cannot import : no object %s with functional key: \"%s\" were found."
 msgstr ""
 "Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
@@ -54,27 +58,27 @@ msgstr "Compte bloqué"
 
 msgctxt "model:account.payment.journal.reject_reason,description:sepa_AC13"
 msgid "Debtor account is a consumer account"
-msgstr ""
+msgstr "Le titulaire du compte est un consommateur"
 
 msgctxt "model:account.payment.journal.reject_reason,description:sepa_AG01"
 msgid "Transaction forbidden"
-msgstr ""
+msgstr "Opération non admise"
 
 msgctxt "model:account.payment.journal.reject_reason,description:sepa_AG02"
 msgid "Invalid bank operation code"
-msgstr ""
+msgstr "Code opération incorrect"
 
 msgctxt "model:account.payment.journal.reject_reason,description:sepa_AM04"
 msgid "Insufficient funds"
-msgstr ""
+msgstr "Provision insuffisante"
 
 msgctxt "model:account.payment.journal.reject_reason,description:sepa_AM05"
 msgid "Duplication"
-msgstr ""
+msgstr "Doublon"
 
 msgctxt "model:account.payment.journal.reject_reason,description:sepa_ARDT"
 msgid "The transaction has already been returned"
-msgstr ""
+msgstr "Opération d’origine déjà retournée"
 
 msgctxt "model:account.payment.journal.reject_reason,description:sepa_BE04"
 msgid "Account address invalid"
@@ -82,23 +86,23 @@ msgstr "Adresse du compte invalide"
 
 msgctxt "model:account.payment.journal.reject_reason,description:sepa_BE05"
 msgid "Unrecognised initiating party"
-msgstr ""
+msgstr "Emetteur non reconnu"
 
 msgctxt "model:account.payment.journal.reject_reason,description:sepa_BE06"
 msgid "Unknown customer"
-msgstr ""
+msgstr "Destinataire non reconnu"
 
 msgctxt "model:account.payment.journal.reject_reason,description:sepa_CUST"
 msgid "Cancellation requested by customer"
-msgstr ""
+msgstr "Annulation demandée par le lient"
 
 msgctxt "model:account.payment.journal.reject_reason,description:sepa_DUPL"
 msgid "Duplicate sending"
-msgstr ""
+msgstr "Doublon"
 
 msgctxt "model:account.payment.journal.reject_reason,description:sepa_ED01"
 msgid "Correspondant bank not possible"
-msgstr ""
+msgstr "Banque hors échanges"
 
 msgctxt "model:account.payment.journal.reject_reason,description:sepa_FF01"
 msgid "Invalid file format"
@@ -106,83 +110,83 @@ msgstr "Format de fichier non valide"
 
 msgctxt "model:account.payment.journal.reject_reason,description:sepa_FF05"
 msgid "Incorrect direct debit type"
-msgstr ""
+msgstr "Type de prélèvement incorrect"
 
 msgctxt "model:account.payment.journal.reject_reason,description:sepa_FOCR"
 msgid "Positive answer to the recall"
-msgstr ""
+msgstr "Retour en réponse positive à un Recall"
 
 msgctxt "model:account.payment.journal.reject_reason,description:sepa_FRAD"
 msgid "Fraudulent originated credit transfer"
-msgstr ""
+msgstr "Virement d’origine frauduleuse"
 
 msgctxt "model:account.payment.journal.reject_reason,description:sepa_LEGL"
 msgid "Legal reason"
-msgstr ""
+msgstr "Motif réglementaire"
 
 msgctxt "model:account.payment.journal.reject_reason,description:sepa_MD01"
 msgid "No mandate"
-msgstr ""
+msgstr "Pas d’autorisation / Absence de mandat"
 
 msgctxt "model:account.payment.journal.reject_reason,description:sepa_MD02"
 msgid "No valid mandate"
-msgstr ""
+msgstr "Donnée mandat incorrecte"
 
 msgctxt "model:account.payment.journal.reject_reason,description:sepa_MD06"
 msgid "Refund request by end customer"
-msgstr ""
+msgstr "Contestation débiteur / Contestation d’une opération autorisée"
 
 msgctxt "model:account.payment.journal.reject_reason,description:sepa_MD07"
 msgid "End customer deceased"
-msgstr ""
+msgstr "Titulaire décédé"
 
 msgctxt "model:account.payment.journal.reject_reason,description:sepa_MS02"
 msgid "Refusal by debtor"
-msgstr ""
+msgstr "Sur ordre du client / Refus du débiteur"
 
 msgctxt "model:account.payment.journal.reject_reason,description:sepa_MS03"
 msgid "Not specified reason"
-msgstr ""
+msgstr "Raison non communiquée"
 
 msgctxt "model:account.payment.journal.reject_reason,description:sepa_NOAS"
 msgid "No response from beneficiary"
-msgstr ""
+msgstr "Pas d’autorisation"
 
 msgctxt "model:account.payment.journal.reject_reason,description:sepa_NOOR"
 msgid "Original credit transfer never received"
-msgstr ""
+msgstr "Reçu à tort car opération d’origine non reçue"
 
 msgctxt "model:account.payment.journal.reject_reason,description:sepa_RC01"
 msgid "Incorrect bank identifier"
-msgstr ""
+msgstr "Code banque incorrect / Identifiant bancaire incorrect"
 
 msgctxt "model:account.payment.journal.reject_reason,description:sepa_RR01"
 msgid "Missing debtor account or identification"
-msgstr ""
+msgstr "Motif réglementaire"
 
 msgctxt "model:account.payment.journal.reject_reason,description:sepa_RR02"
 msgid "Missing debtor name or address"
-msgstr ""
+msgstr "Motif réglementaire"
 
 msgctxt "model:account.payment.journal.reject_reason,description:sepa_RR03"
 msgid "Missing creditor name or address"
-msgstr ""
+msgstr "Motif réglementaire"
 
 msgctxt "model:account.payment.journal.reject_reason,description:sepa_RR04"
 msgid "Regulatory reason"
-msgstr ""
+msgstr "Motif réglementaire"
 
 msgctxt "model:account.payment.journal.reject_reason,description:sepa_SL01"
 msgid "Specific service by debtor agent"
-msgstr ""
+msgstr "Service spécifique"
 
 msgctxt "model:account.payment.journal.reject_reason,description:sepa_TECH"
 msgid "Technical problems resulting in erroneous SCTs"
-msgstr ""
+msgstr "SCT non conforme dû à un problème technique"
 
 msgctxt "model:account.payment.journal.reject_reason,description:sepa_TM01"
 msgid "File receive after Cut-off time"
-msgstr ""
+msgstr "Heure limite dépassée"
 
 msgctxt "model:ir.sequence,name:sequence_account_payment_merged"
 msgid "Default Account Payment Merged"
