modules: batches can now accept extra arguments
fix #1457
http://rietveld.coopengo.com/2950001

--- a/modules/cog_utils/CHANGELOG
+++ b/modules/cog_utils/CHANGELOG
@@ -1,3 +1,4 @@
+* Batches can now make use of command line extra arguments  
 * Allow to automatically delete removed records of a O2M field
 * Allow to configure required data for an export
 * Allow to call ir.model.methods with lists
